--- a/src/components/Testimonials/index.module.scss
+++ b/src/components/Testimonials/index.module.scss
@@ -17,12 +17,8 @@
     min-width: 1172px;
   }
 
-  @include responsive('tablet', 'phone', 'phone-xs', 'laptop') {
+  @include responsive('tablet', 'laptop') {
     padding: 0 24px;
-  }
-
-  @include responsive('phone-xs') {
-    padding: 0 16px;
   }
 }
 
@@ -102,6 +98,8 @@
 
   @include responsive('phone', 'phone-xs') {
     width: 100%;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
