--- a/src/components/TwitterFeedbacks/TwitterFeedbacks.module.scss
+++ b/src/components/TwitterFeedbacks/TwitterFeedbacks.module.scss
@@ -5,9 +5,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 80px;
+  margin: 80px auto 0;
+  max-width: 1140px;
 
-  @include responsive('phone', 'phone-xs', 'laptop', 'tablet') {
+  @include responsive('phone','laptop', 'tablet') {
+    padding: 0 24px;
+  }
+
+  @include responsive('phone-xs') {
     padding: 0 16px;
   }
 }
@@ -21,7 +26,6 @@
 .list {
   margin-top: 48px;
   margin-bottom: 24px;
-  padding: 0 24px;
   flex-wrap: wrap;
   position: relative;
   display: flex;
